updated home page- added cards with working route to products, gallery, about us, and contact us page.uploaded images in assets folder. fixed logo of nav bar to be aligned at the center.

--- a/E-commerce-app/src/app/header/header.component.css
+++ b/E-commerce-app/src/app/header/header.component.css
@@ -19,7 +19,7 @@ nav ul li {
 }
 
 nav ul li a {
-  
+
   display: block;
   color: rgb(35, 72, 35);
   text-align: center;
@@ -37,7 +37,7 @@ img {
   padding-top: 2px ;
   padding-bottom: 1px;
   width: 153px;
-  float: right;
+  
 }
 
 svg{
