--- a/E-commerce-app/src/app/home/home.component.css
+++ b/E-commerce-app/src/app/home/home.component.css
@@ -1,12 +1,38 @@
+body{
+  background-color:  cadetblue;
+  padding-bottom: 20px;
+}
+
+.col-sm-3{
+  background-color: cadetblue;
+  margin-left: 0%;
+}
 img {
   padding-top: 20px;
   padding-bottom: 20px;
   display: block;
   width: 100%;
   margin: auto;
-  
+
 }
 
-div{
-  background-color: cadetblue;
+.card{
+  background-color: rgb(200, 221, 221);
 }
+.card-img-top{
+  height: 300px;
+  width: 500px;
+}
+
+
+.card-block{
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+.card-title{
+  text-align: center;
+}
+.card-text {
+  text-align: center;
+}
+
